ISS-11-17-45 Initial Fix  Main Elements Alignment

--- a/styles/faqs.css
+++ b/styles/faqs.css
@@ -34,6 +34,7 @@ sup {
 @media screen and (min-width: 992px) {
   .hpp-dtc-m-hero .content {
     margin-bottom: 5rem;
+    padding: 0 15px;
   }
 
   [data-module=PageSubnav] .jumpbtn {
@@ -58,7 +59,7 @@ sup {
 
   .faqs-hero .pre-title {
     position: relative;
-    left: -8%;
+    left: 0;
   }
 
   .faqs-hero .hero-box {
